2017-12-27  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Removed unused variables.

2017-12-03  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Added setup.py.

2017-11-26  vaiorabbit  <http://twitter.com/vaiorabbit>

	* fixed wildcard import.

2017-11-25  vaiorabbit  <http://twitter.com/vaiorabbit>

	* removed unused variables.
	* initial commmit