@@ -1,3 +1,7 @@
+2018-12-23  vaiorabbit  <http://twitter.com/vaiorabbit>
+
+	* glfwmaster_build_dylib.sh: Added.
+
 2017-12-27  vaiorabbit  <http://twitter.com/vaiorabbit>
 
 	* Removed unused variables.
